Issue #SB-17865 Mobile app banner overlaps with content card on mobile browser

--- a/src/app/client/src/assets/styles/layout/_footer.scss
+++ b/src/app/client/src/assets/styles/layout/_footer.scss
@@ -183,7 +183,7 @@
     }
 
   .footer {
-    max-height: 225px;
+    max-height: 230px;
     .footerMenu {
       ul {
         margin-top: 0 !important;
